force-app/main/default/objects/GRV_MCBODY__c/GRV_MCBODY__c.object-meta.xml
<CustomObject>
    <label>GRV MCBODY</label>
    <nameField>
        <label>GRV MCBODY</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GRV MCBODY</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>