force-app/main/default/objects/GRV_MCBODY__c/fields/GPFACE__c.field-meta.xml
<CustomField>
    <fullName>GPFACE__c</fullName>
    <label>GPFACE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>