force-app/main/default/objects/GRV_MCBODY__c/fields/GPTYPE__c.field-meta.xml
<CustomField>
    <fullName>GPTYPE__c</fullName>
    <label>GPTYPE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>