force-app/main/default/objects/GRV_MCBODY__c/fields/MCBODY__c.field-meta.xml
<CustomField>
    <fullName>MCBODY__c</fullName>
    <label>MCBODY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>