force-app/main/default/objects/GRV_MCBODY__c/fields/MCDPHM__c.field-meta.xml
<CustomField>
    <fullName>MCDPHM__c</fullName>
    <label>MCDPHM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>