force-app/main/default/objects/GRV_MCBODY__c/fields/MCPSGD__c.field-meta.xml
<CustomField>
    <fullName>MCPSGD__c</fullName>
    <label>MCPSGD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>