force-app/main/default/objects/GRV_MCBODY__c/fields/SZC__c.field-meta.xml
<CustomField>
    <fullName>SZC__c</fullName>
    <label>SZC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>