force-app/main/default/objects/GRV_MCBODY__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>SZC__c</columns>
    <columns>HCLASS__c</columns>
    <columns>NACE__c</columns>
    <columns>MaxMAWP__c</columns>
    <columns>ATEX__c</columns>
    <columns>MCBODY__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>